chore: change footer translation

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,6 +18,6 @@
       "quote": "I see in your eyes the same fear that would take the heart of me....",
       "name": "The Lord of the Rings, 2003"
     },
-    "copyright": "© 2022 MOVIE QUOTES. ALL RIGHTS RESERVED."
+    "copyright": "ALL RIGHTS RESERVED."
   }
 }
