--- a/public/locales/ka/common.json
+++ b/public/locales/ka/common.json
@@ -18,6 +18,6 @@
       "quote": "შენს თვალებში იმავე შიშს ვხედავ, რომელიც გულს დამიპყრობს...",
       "name": "ბეჭდების მბრძანებელი, 2003"
     },
-    "copyright": "© 2022 MOVIE QUOTES. ყველა უფლება დაცულია."
+    "copyright": "ყველა უფლება დაცულია."
   }
 }
