--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -36,5 +36,14 @@
     "emailPlaceholder": "შეიყვანეთ თქვენი ელ-ფოსტა",
     "btn": "ინსტრუქციის გაგზავნა",
     "backToLogin": "დაბრუნდით ავტორიზაციის გვერდზე"
+  },
+  "errors": {
+    "required": "გთხოვთ შეავსოთ ველი",
+    "min": "მინიმუმ 3 სიმბოლო",
+    "max": "მაქსიმუმ 15 სიმბოლო",
+    "usernamePattern": "დაბალი ლათინური სიმბოლოები და ციფრები.",
+    "emailPattern": "უნდა იყოს ვალიდური ელ-ფოსტა.",
+    "minPassword": "მინიმუმ 8 სიმბოლო",
+    "passwordPattern": "დაბალი ლათინური სიმბოლოები და ციფრები."
   }
 }
