--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -44,6 +44,7 @@
     "usernamePattern": "დაბალი ლათინური სიმბოლოები და ციფრები.",
     "emailPattern": "უნდა იყოს ვალიდური ელ-ფოსტა.",
     "minPassword": "მინიმუმ 8 სიმბოლო",
-    "passwordPattern": "დაბალი ლათინური სიმბოლოები და ციფრები."
+    "passwordPattern": "დაბალი ლათინური სიმბოლოები და ციფრები.",
+    "confirmPassword": "პაროლი არ ემთხვევა"
   }
 }
