chore: add error message for signup if email or username is not unique

--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -46,5 +46,9 @@
     "minPassword": "At least 8 characters",
     "passwordPattern": "Only lowercase Latin characters and numbers",
     "confirmPassword": "Password doesn't match."
+  },
+  "unique": {
+    "email": "The email has already been taken.",
+    "name": "The username has already been taken."
   }
 }
