--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -46,5 +46,9 @@
     "minPassword": "მინიმუმ 8 სიმბოლო",
     "passwordPattern": "დაბალი ლათინური სიმბოლოები და ციფრები.",
     "confirmPassword": "პაროლი არ ემთხვევა"
+  },
+  "unique": {
+    "email": "არჩეული ელ-ფოსტა უკვე გამოყენებულია.",
+    "name": "არჩეული სახელი უკვე გამოყენებულია"
   }
 }
