--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -50,5 +50,13 @@
   "unique": {
     "email": "არჩეული ელ-ფოსტა უკვე გამოყენებულია.",
     "name": "არჩეული სახელი უკვე გამოყენებულია"
-  }
+  },
+  "exists": {
+    "email": "არჩეული ელ-ფოსტა ვერ მოიძებნა.",
+    "name": "არჩეული სახელი ვერ მოიძებნა."
+  },
+  "verify": {
+    "email": "თქვენ ელ-ფოსტა არ არის ვერიფიცირებული."
+  },
+  "password": "არასწორი პაროლი."
 }
