--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -16,7 +16,7 @@
     "logIn": "შესვლა"
   },
   "logIn": {
-    "about": "პროფილში შესვლა",
+    "about": "პროფილზე შესვლა",
     "description": "გთხოვთ შეიყვანოთ თქვენი დეტალები.",
     "email": "ელ-ფოსტა",
     "emailPlaceholder": "შეიყვანეთ თქვენი ელ-ფოსტა",
@@ -30,7 +30,7 @@
     "signUp": "რეგისტრაცია"
   },
   "forgotPassword": {
-    "about": "დაგავიწყდათ პაროლი?",
+    "about": "პაროლის აღდგენა",
     "description": "შეიყვანეთ მეილი სადაც გამოგეგზავნებათ პაროლის აღდგენის ინსტრუქცია",
     "email": "ელ-ფოსტა",
     "emailPlaceholder": "შეიყვანეთ თქვენი ელ-ფოსტა",
