--- a/public/locales/ka/notification.json
+++ b/public/locales/ka/notification.json
@@ -16,6 +16,25 @@
     }
   },
 
+  "password": {
+    "alreadyVerified": {
+      "title": "თქვენ უკვე შეცვალეთ პაროლი!",
+      "btn": "შესვლა"
+    },
+    "verification": {
+      "title": "შეამოწმეთ ელ-ფოსტა",
+      "description": "გთხოვთ შეამოწმოთ ელ-ფოსტა და მიჰყევით ინსტრუქციას პაროლის აღსადგენად.",
+      "btn": "ელ-ფოსტაზე შესვლა",
+      "skip": "მოგვიანებით დავადასტურებ."
+    },
+
+    "verified": {
+      "title": "გმადლობთ!",
+      "description": "თქვენი პაროლი წარმატებით განახლდა.",
+      "btn": "შესვლა"
+    }
+  },
+
   "forbidden": {
     "title": "თქვენ არ შეგიძლიათ გადასვლა!",
     "description": "თქვენ არ გაქვთ უფლება ამ გვერდზე შესვლის",
