--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -58,5 +58,9 @@
   "verify": {
     "email": "თქვენ ელ-ფოსტა არ არის ვერიფიცირებული."
   },
-  "password": "არასწორი პაროლი."
+  "password": "არასწორი პაროლი.",
+  "resetPassword": "პაროლის აღდგენა",
+  "backToLogin": "ავტორიზაციაზე დაბრუნება",
+  "createPassword": "ახალი პაროლი",
+  "resetPasswordAbout": "თქვენი პაროლი უნდა იყოს განსხვავებული წინა პაროლისგან"
 }
