--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -45,7 +45,10 @@
     "emailPattern": "უნდა იყოს ვალიდური ელ-ფოსტა.",
     "minPassword": "მინიმუმ 8 სიმბოლო",
     "passwordPattern": "დაბალი ლათინური სიმბოლოები და ციფრები.",
-    "confirmPassword": "პაროლი არ ემთხვევა"
+    "confirmPassword": "პაროლი არ ემთხვევა",
+    "number": "გთხოვთ შეიყვანოთ ვალიდური წელი",
+    "year": "გთხოვთ შეიყვანოთ ვალიდური წელი",
+    "file": "ფაილი უნდა იყოს სურათის გაფართოებით"
   },
   "unique": {
     "email": "არჩეული ელ-ფოსტა უკვე გამოყენებულია.",
@@ -62,5 +65,40 @@
   "resetPassword": "პაროლის აღდგენა",
   "backToLogin": "ავტორიზაციაზე დაბრუნება",
   "createPassword": "ახალი პაროლი",
-  "resetPasswordAbout": "თქვენი პაროლი უნდა იყოს განსხვავებული წინა პაროლისგან"
+  "resetPasswordAbout": "თქვენი პაროლი უნდა იყოს განსხვავებული წინა პაროლისგან",
+  "selectGenre": "აირჩიე ჟანრი",
+  "quotesEn": "გთხოვთ შეავსოთ ინგლისურად",
+  "quotesKa": "გთხოვთ შეავსოთ ქართულად",
+  "logout": "გამოსვლა",
+  "movies": {
+    "editProfile": "პროფილის შეცვლა",
+    "newsFeed": "სიახლეები",
+    "listOfMovies": "ფილმების სია",
+    "myListOfMovies": "ჩემი ფილმების სია",
+    "search": "ძიება",
+    "addMovie": "დაამატე ფილმი",
+    "selectGenre": "აირჩიე ჟანრი",
+    "budget": "ბიუჟეტი",
+    "year": "წელი",
+    "uploadImage": "ატვირთე სურათი",
+    "dragDrop": "ჩააგდე სურათი ან",
+    "chooseFile": "სურათის არჩევა",
+    "movieDescription": "ფილმის აღწერა",
+    "director": "რეჟისორი",
+    "total": "ჯამში",
+    "updateMovie": "ფილმის განახლება"
+  },
+  "quotes": {
+    "addQuote": "დაამატე ციტატა",
+    "total": "ჯამში",
+    "allQuotes": "ყველა ციტატა",
+    "quotes": "ციტატები",
+    "viewPost": "პოსტის ნახვა",
+    "editPost": "პოსტის რედაქტირება",
+    "delete": "წაშლა",
+    "viewQuote": "ციტატის ნახვა",
+    "editQuote": "ციტატის რედაქტირება",
+    "changePhoto": "სურათის შეცვლა",
+    "writeComment": "დაწერე კომენტარი"
+  }
 }
