style: add search mobile component for news feed

--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -99,6 +99,8 @@
     "viewQuote": "View quote",
     "editQuote": "Edit quote",
     "changePhoto": "Change Photo",
-    "writeComment": "Write a comment"
+    "writeComment": "Write a comment",
+    "enterMovie": "Enter @ to search movies",
+    "enterQuote": "Enter # to search quotes"
   }
 }
