--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -99,6 +99,8 @@
     "viewQuote": "ციტატის ნახვა",
     "editQuote": "ციტატის რედაქტირება",
     "changePhoto": "სურათის შეცვლა",
-    "writeComment": "დაწერე კომენტარი"
+    "writeComment": "დაწერე კომენტარი",
+    "enterMovie": "შეიყვანეთ @ ფილმის ძიებისთვის",
+    "enterQuote": "შეიყვანეთ # ციტატის ძიებისთვის"
   }
 }
