feat: add desktop search component in news feed

--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -101,6 +101,9 @@
     "changePhoto": "Change Photo",
     "writeComment": "Write a comment",
     "enterMovie": "Enter @ to search movies",
-    "enterQuote": "Enter # to search quotes"
+    "enterQuote": "Enter # to search quotes",
+    "desktopSearch": "Enter @ to search movies, Enter # to search quotes",
+    "searchBy": "Search by",
+    "writeNewQuote": "Write new quote"
   }
 }
