--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -101,6 +101,9 @@
     "changePhoto": "სურათის შეცვლა",
     "writeComment": "დაწერე კომენტარი",
     "enterMovie": "შეიყვანეთ @ ფილმის ძიებისთვის",
-    "enterQuote": "შეიყვანეთ # ციტატის ძიებისთვის"
+    "enterQuote": "შეიყვანეთ # ციტატის ძიებისთვის",
+    "desktopSearch": "შეიყვანე @ ფილმის ძიებისთვის, შეიყვანე # ციტატის ძიებისთვის",
+    "searchBy": "ძიება",
+    "writeNewQuote": "ციტატის დამატება"
   }
 }
