--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -104,6 +104,8 @@
     "enterQuote": "შეიყვანეთ # ციტატის ძიებისთვის",
     "desktopSearch": "შეიყვანე @ ფილმის ძიებისთვის, შეიყვანე # ციტატის ძიებისთვის",
     "searchBy": "ძიება",
-    "writeNewQuote": "ციტატის დამატება"
+    "writeNewQuote": "ციტატის დამატება",
+    "chooseMovie": "აირჩიე ფილმი",
+    "Post": "დამატება"
   }
 }
