--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -107,5 +107,13 @@
     "writeNewQuote": "ციტატის დამატება",
     "chooseMovie": "აირჩიე ფილმი",
     "Post": "დამატება"
-  }
+  },
+  "min": "წუთის წინ",
+  "hour": "საათის წინ",
+  "day": "დღის წინ",
+  "new": "ახალი",
+  "liked": "მოიწონა თქვენი ციტატა",
+  "commented": "დააკომენტარა თქვენს ციტატაზე",
+  "notifications": "შეტყობინებები",
+  "markAllAsRead": "წაიკითხე ყველა"
 }
