--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -125,9 +125,28 @@
     "edit": "შეცვლა",
     "email": "ელ-ფოსტა",
     "cancel": "გაუქმება",
-    "saveChanges": "შენახვა",
+    "saveChanges": "ცვლილების დამახსოვრება",
     "enterNewUsername": "ახალი მომხმარებელი",
     "add": "დამატება",
-    "areYouSure": "დარწმუნებული ხარ ?"
+    "areYouSure": "დარწმუნებული ხარ ?",
+    "password": "პაროლი",
+    "confirmPassword": "გაიმეორეთ პაროლი",
+    "shouldContain": "პაროლი უნდა შეიცავდეს:",
+    "orMoreCharacters": "ან მეტ სიმბოლოს",
+    "lowercaseCharacter": "დაბალი რეგისტრის სიმბოლოს",
+    "newPassword": "ახალი პაროლი",
+    "newEmailAdded": "ახალი ელ-ფოსტა წარმატებით დაემატა",
+    "verify": "შეამოწმეთ ელ-ფოსტა  ვერიფიკაციისთვის",
+    "primary": "მთავარი ელ-ფოსტა წარმატებით შეიცვალა",
+    "primaryEmail": "მთავარი ელ-ფოსტა",
+    "notVerified": "არავერიფიცირებული",
+    "remove": "წაშლა",
+    "addNewEmail": "ელ-ფოსტის დამატება",
+    "makeThisPrimary": "გახადე მთავარი",
+    "usernameChanged": "სახელი წარმატებით შეიცვალა",
+    "passwordChanged": "პაროლი წარმატებით განახლდა",
+    "primaryEm": "მთავარი",
+    "newEmail": "ახალი ელ-ფოსტა",
+    "emailVerified": "თქვენი ელ-ფოსტა ვერიფიცირებულია!"
   }
 }
