--- a/public/locales/ka/notification.json
+++ b/public/locales/ka/notification.json
@@ -39,5 +39,10 @@
     "title": "თქვენ არ შეგიძლიათ გადასვლა!",
     "description": "თქვენ არ გაქვთ უფლება ამ გვერდზე შესვლის",
     "btn": "მთავარი"
+  },
+  "notFound": {
+    "title": "უი!",
+    "description": "სამწუხაროდ გვერდი ვერ მოიძებნა",
+    "btn": "მთავარი"
   }
 }
