--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -48,6 +48,7 @@
     "confirmPassword": "პაროლი არ ემთხვევა",
     "number": "გთხოვთ შეიყვანოთ ვალიდური წელი",
     "year": "გთხოვთ შეიყვანოთ ვალიდური წელი",
+    "budget": "გთხოვთ შეიყვანოთ ციფრები",
     "file": "ფაილი უნდა იყოს სურათის გაფართოებით"
   },
   "unique": {
