chore: change title and placeholder for login form on first input

--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -19,7 +19,9 @@
     "about": "Log in to your account",
     "description": "Welcome back! Please enter your details.",
     "email": "Email",
+    "emailOrUsername": "Email or Username",
     "emailPlaceholder": "Enter your email",
+    "emailOrUserNamePlaceholder": "Enter your email or username",
     "password": "Password",
     "passwordPlaceholder": "Password",
     "btn": "Sign in",
