--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -19,7 +19,9 @@
     "about": "პროფილზე შესვლა",
     "description": "გთხოვთ შეიყვანოთ თქვენი დეტალები.",
     "email": "ელ-ფოსტა",
+    "emailOrUsername": "ელ-ფოსტა ან მომხმარებელი",
     "emailPlaceholder": "შეიყვანეთ თქვენი ელ-ფოსტა",
+    "emailOrUserNamePlaceholder": "შეიყვანეთ ელ-ფოსტა ან მომხმარებელი",
     "password": "პაროლი",
     "passwordPlaceholder": "პაროლი",
     "btn": "შესვლა",
