chore: add error message if image is too large for upload

--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -51,7 +51,8 @@
     "number": "Please enter a valid year",
     "year": "Please enter a valid year",
     "budget": "Should be numbers",
-    "file": "File should be image"
+    "file": "File should be image",
+    "tooLarge": "Content too large"
   },
   "unique": {
     "email": "The email has already been taken.",
