--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -51,7 +51,8 @@
     "number": "გთხოვთ შეიყვანოთ ვალიდური წელი",
     "year": "გთხოვთ შეიყვანოთ ვალიდური წელი",
     "budget": "გთხოვთ შეიყვანოთ ციფრები",
-    "file": "ფაილი უნდა იყოს სურათის გაფართოებით"
+    "file": "ფაილი უნდა იყოს სურათის გაფართოებით",
+    "tooLarge": "ფაილის ზომა დიდია"
   },
   "unique": {
     "email": "არჩეული ელ-ფოსტა უკვე გამოყენებულია.",
