chore: change validation of upload/update movie

--- a/public/locales/en/forms.json
+++ b/public/locales/en/forms.json
@@ -73,6 +73,8 @@
   "selectGenre": "Select genre",
   "quotesEn": "Please fill in English",
   "quotesKa": "Please fill in Georgian",
+  "moviesEn": "Please fill in English",
+  "moviesKa": "Please fill in Georgian",
   "logout": "Log out",
   "movies": {
     "editProfile": "Edit your profile",
