--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -73,6 +73,8 @@
   "selectGenre": "აირჩიე ჟანრი",
   "quotesEn": "გთხოვთ შეავსოთ ინგლისურად",
   "quotesKa": "გთხოვთ შეავსოთ ქართულად",
+  "moviesEn": "გთხოვთ შეავსოთ ინგლისურად",
+  "moviesKa": "გთხოვთ შეავსოთ ქართულად",
   "logout": "გამოსვლა",
   "movies": {
     "editProfile": "პროფილის შეცვლა",
