--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -37,7 +37,8 @@
     "email": "ელ-ფოსტა",
     "emailPlaceholder": "შეიყვანეთ თქვენი ელ-ფოსტა",
     "btn": "ინსტრუქციის გაგზავნა",
-    "backToLogin": "დაბრუნდით ავტორიზაციის გვერდზე"
+    "backToLogin": "დაბრუნდით ავტორიზაციის გვერდზე",
+    "googleEmail": "გუგლის ელ-ფოსტაზე პაროლის აღდგენა შეუძლებელია"
   },
   "errors": {
     "required": "გთხოვთ შეავსოთ ველი",
