--- a/public/locales/ka/forms.json
+++ b/public/locales/ka/forms.json
@@ -53,7 +53,7 @@
     "year": "გთხოვთ შეიყვანოთ ვალიდური წელი",
     "budget": "გთხოვთ შეიყვანოთ ციფრები",
     "file": "ფაილი უნდა იყოს სურათის გაფართოებით",
-    "tooLarge": "ფაილის ზომა დიდია"
+    "tooLarge": "ფაილის ზომა დიდია (ლიმიტი 10mb)"
   },
   "unique": {
     "email": "არჩეული ელ-ფოსტა უკვე გამოყენებულია.",
